# Project_MLOPS_Default_of_Credit_Card

./: .env  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  dvc.yaml  fix_windows_encoding.py  params.yaml  pyproject.toml  requirements.txt  run_api.py  run_pipeline.py  test_prediction.py  test_simple.py
.github/workflows/: ci-cd.yml
dags/: credit_scoring_retraining.py
data/: validation_status.txt
data/expectations/: test_validation_summary.txt  train_validation_summary.txt
data/processed/: test.csv
deployment/docker/: Dockerfile.api
deployment/kubernetes/: deployment.yaml  hpa.yaml
infrastructure/modules/kubernetes/: main.tf  network-policy.yaml
metrics/: simple_model_metrics_fixed.json
mlruns/872829832428989943/: meta.yaml
mlruns/872829832428989943/d0a50e65a6974a6bb86144eeb8f03a14/: meta.yaml
mlruns/872829832428989943/d0a50e65a6974a6bb86144eeb8f03a14/tags/: mlflow.runName
mlruns/872829832428989943/e3298ed6165548ceb1eb0fb2ad94bfe2/: meta.yaml
mlruns/872829832428989943/e3298ed6165548ceb1eb0fb2ad94bfe2/tags/: mlflow.runName
mlruns/872829832428989943/ed92519d9f1e4ae587b50955f93fbac6/: meta.yaml
mlruns/872829832428989943/ed92519d9f1e4ae587b50955f93fbac6/tags/: mlflow.runName
model_management/: model_registry.py
models/: credit_default_model.joblib
monitoring/drift/: drift_monitoring.py
monitoring/elk/: filebeat-config.yaml
monitoring/grafana/dashboards/: credit-scoring-api.json
monitoring/prometheus/: prometheus-values.yaml
reports/validation/: test_validation_results.json  train_validation_results.json
scripts/: deploy-blue-green.sh
scripts/model_optimization/: quantization_pruning.py
scripts/model_training/: onnx_conversion.py
scripts/performance/: locustfile.py  run_benchmark.sh
src/api/: app.py  test_api.py
src/data/: check_data.py  make_dataset.py  preprocessing.py  validation.py
src/models/: pipeline.py  train.py
src/monitoring/: drift_monitor.py
src/tests/: test_model.py  test_preprocessing.py
