[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-scoring-model"
version = "0.1.0"
description = "Automated ML pipeline for credit default prediction"
authors = [
    {name = "ML Engineer", email = "ml@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.0.0",
    "great-expectations>=0.18.0",
    "dvc>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "black", "jupyter"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]